--- a/src/main/resources/re/templates/clab_criptomonedas/index.html
+++ b/src/main/resources/re/templates/clab_criptomonedas/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html th:fragment="html">
+<html th:lang="${lenguaje_tex}" th:fragment="html">
     <head>
         <title th:text="${titulo_tex}"></title>
         <meta charset="UTF-8">
